ChangeLog

2005-10-16 ekohl

   tools/widl/client.c
   tools/widl/server.c

- Fix [out, size_is, unique] parameter issues.

2005-10-09 ekohl

   tools/widl/client.c
   tools/widl/server.c

- Support [out, unique] base type parameters.

2005-08-07 ekohl

   tools/widl/server.c

- Support size_is(*Length) attributes for strings.

2005-07-30 ekohl

   tools/widl/client.c
   tools/widl/server.c

- Support conformant arrays as in and out parameters.
- Fix message buffer size calculation for client and server.

2005-07-25 ekohl

   tools/widl/client.c
   tools/widl/lex.yy.c
   tools/widl/parser.y
   tools/widl/proxy.c
   tools/widl/server.c
   tools/widl/y.tab.c
   tools/widl/y.tab.h

- Fix grammar of the size_is attribute so that size_is(*Length) gets accepted.

2005-07-23 ekohl

   tools/widl/client.c
   tools/widl/server.c

- Fix offset calculation bug in the ProcFormatString.
- Fix offset calculation bug in the marshalling and unmarshalling code.
- Fix typos in the TypeFormatString.
This makes the [string, out, size_is()] parameters work properly.

2005-07-17 ekohl

   tools/widl/client.c
   tools/widl/server.c

Fix bugs for in-string parameters.
Implement out-string parameters (untested).

2005-05-08 weiden

   tools/widl/server.c

Don't generate lvalue assignment code.

2005-05-08 weiden

   tools/widl/client.c
   tools/widl/proxy.c
   tools/widl/server.c

Generate code GCC4.x accepts.

2005-04-18 navaraf

   tools/widl/parser.y

Don't use pointer to freed memory.

2005-04-17 ekohl

   tools/widl/server.c

Support out-pointers to structs.

2005-04-15 ekohl

   tools/widl/client.c
   tools/widl/parser.y
   tools/widl/server.c

Support in-pointers to structs.

2005-04-03 ekohl

   tools/widl/client.c
   tools/widl/parser.l
   tools/widl/parser.y
   tools/widl/server.c
   tools/widl/widltypes.h

Support 'ref' and 'unique' attributes for pointers.

2005-03-27 Jacek Caban (from WINE)

  tools/widl/parser.y
  tools/widl/y.tab.c

Added handling of unsigned type
