@@ -649,6 +649,7 @@ static void print_message_buffer_size(func_t *func, unsigned int *type_offset)
             out_attr = is_attr(var->attrs, ATTR_OUT);
             string_attr = is_attr(var->attrs, ATTR_STRING);
             sizeis_attr = get_attrp(var->attrs, ATTR_SIZEIS);
+            unique_attr = is_attr(var->attrs, ATTR_UNIQUE);
 
             if (out_attr)
             {
@@ -707,6 +708,11 @@ static void print_message_buffer_size(func_t *func, unsigned int *type_offset)
                             error("%s:%d Unknown/unsupported type 0x%x\n",
                                   __FUNCTION__,__LINE__, var->type->type);
                             return;
+                        }
+
+                        if (unique_attr)
+                        {
+                            size += 4;
                         }
                     }
                 }
